# fs2cloud

./: .gitignore  Cargo.toml  README.md  config.example.yml  crawl.sh  export.sh  fs.sh  generate_test_data.sh  import.sh  ls.sh  pull.sh  push.sh  unwrap.sh
src/: chunk.rs  chunk_buf_reader.rs  chunks_repository.rs  config.rs  configuration_repository.rs  controller.rs  database.rs  error.rs  export.rs  export_import.rs  file.rs  files_repository.rs  fs.rs  fs_repository.rs  fuse.rs  hash.rs  main.rs  metrics.rs  opts.rs  parts_repository.rs  pgp.rs  pull.rs  push.rs  s3.rs  status.rs  store.rs  thread_pool.rs
src/aggregate/: repository.rs
src/aggregate/sql/: find_by_aggregate_path.sql  find_by_file_path.sql  insert.sql
src/chunk/: completer.rs  repository.rs
src/chunk/sql/: find_siblings_by_uuid.sql  insert.sql  mark_done.sql  update.sql
src/controller/: crawl.rs  json.rs  ls.rs  mount.rs  pull.rs  push.rs  unwrap.rs
src/database/: embedded.rs
src/database/sql/migrations/: V1__create_table_files_and_chunks.sql
src/file/: repository.rs
src/file/sql/: find_all.sql  find_by_mode.sql  find_by_path.sql  find_by_status.sql  find_by_status_and_min_size.sql  find_by_status_and_mode.sql  find_by_uuid.sql  insert.sql  mark_aggregated.sql
src/fuse/: fs.rs
src/fuse/fs/: repository.rs
src/fuse/fs/sql/: inode_list_by_parent_id.sql
src/sql/: chunks_find_by_file_uuid_and_idx.sql  chunks_find_by_file_uuid_and_status.sql  chunks_insert.sql  chunks_list_by_file_uuid.sql  chunks_mark_done.sql  configuration_find.sql  configuration_insert_if_missing.sql  configuration_insert_or_ignore.sql  configuration_insert_or_update.sql  files_find_by_path.sql  files_find_by_uuid.sql  files_insert.sql  files_list_all.sql  files_list_by_parts_count.sql  files_list_by_status.sql  files_mark_done.sql  inode_find_by_id.sql  inode_find_by_parent_id_and_name.sql  inode_insert.sql  inode_list_by_parent_id.sql  insert_file.sql  parts_insert.sql  parts_mark_done.sql
src/sql/migrations/: V1__create_table_configuration.sql  V1__create_table_files_and_chunks.sql  V2__create_table_files.sql  V3__create_table_chunks.sql  V3__create_table_parts.sql
src/store/: cache.rs  encrypt.rs  local.rs  log.rs  mod.rs  s3.rs  s3_official.rs
