[package]
name = "fs2cloud"
authors = ["Christophe Pollet <cpollet@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
aws-creds = "0.29.1"
byte-unit = "4.0.14"
clap = { version = "3.1.18", features = ["cargo"] }
clap_complete = "3.1.4"
libc = "0.2.126"
log = "0.4.17"
fallible-iterator = "0.2.0"
fuser = "0.11.1"
pretty_env_logger = "0.4.0"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.19.0", features = ["bundled"] }
refinery = { version = "0.8.4", features = ["rusqlite"] }
rust-s3 = { version = "0.31.0", default-features = false, features = ["sync"] }
rusqlite = { version = "0.26.3", features = ["bundled", "array"] }
sequoia-openpgp = "1.9.0"
serde = "1.0.137"
serde_json = "1.0.81"
sha2 = "0.10.2"
signal-hook = "0.3.14"
time = "0.3.9"
uuid = { version = "1.1.1", features = ["v4", "fast-rng"] }
yaml-rust = "0.4.5"
bincode = "1.3.3"
chrono = "0.4.22"
chrono-humanize = "0.2.2"
async-trait = "0.1.58"
tokio = { version = "1.21.2", features = ["full"] }
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
base64 = "0.13.1"

[dev-dependencies]
rand = "0.8.5"